--- a/dota-stats.html
+++ b/dota-stats.html
@@ -58,109 +58,123 @@
         </ul>
     </nav>
 
-    <!-- Header -->
-    <header id="top" class="header">
-        <div class="text-vertical-center">
-            <h1>Hi, I'm Dudon</h1>
-            <h3></h3>
-            <br>
-            <a href="#about" class="btn btn-dark btn-lg">Check Out My Projects</a>
-        </div>
-    </header>
+       <div id="page-wrapper">
 
-    <!-- About -->
-    <section id="about" class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Engineer ~ Programmer ~ Marketer</h2>
-                    <span><img 
-                        class="img-circle"
-                        src="img/dudon-wai.jpg"
-                        height="250" 
-                        width="250">
-                        </span>
-                    <h2 class="centered mb">Something about me</h2>
-                    <div class="col-lg-6 col-lg-offset-3">
-                        <p><b>Dudon Wai</b> studied engineering at the University of Waterloo and proceeded to move and work in the oil &amp; gas industry. Passionate about solving complex problems, Dudon executed on <b>$100M+</b> in projects over two years. After an unlikely reunion with a friend, Dudon jumped into web development and started <b>GreyADV</b> in late 2015. In his free time, Dudon seeks new food experiences and enjoys dance music with his girlfriend Deanne. He also supports local Calgary startups and loves meeting like-minded people. Grateful for an amazing community, Dudon makes sure to share what he has learned and pay it forward to other aspiring entrepreneurs.</p>
+            <div class="container-fluid">
+
+                <!-- Page Heading -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1 class="page-header">
+                            Dota 2 <small>Statistics</small>
+                        </h1>
+                        <ol class="breadcrumb">
+                            <li class="active">
+                                <i class="fa fa-dashboard"></i> Statistics
+                            </li>
+                        </ol>
                     </div>
                 </div>
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
+                <!-- /.row -->
 
-    <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Projects</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>GreyADV</strong>
-                                </h4>
-                                <p>A web development agency that turned to education to teach new startups how to MVP.</p>
-                                <a href="http://www.greyadv.com/" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Marketing Firm</strong>
-                                </h4>
-                                <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook</p>
-                                <a href="marketing.html" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Artificial Intelligence</strong>
-                                </h4>
-                                <p>Program or be programmed. My journey at Georgia Tech to become a technical programmer in AI.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Dota Stats</strong>
-                                </h4>
-                                <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="alert alert-info alert-dismissable">
+                            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                            <i class="fa fa-info-circle"></i>  <strong>Like Dota 2 Stats?</strong> Give us <a href="http://startbootstrap.com/template-overviews/sb-admin-2" class="alert-link">a shout</a> and tell us how much :)
                         </div>
                     </div>
-                    <!-- /.row (nested) -->
                 </div>
-                <!-- /.col-lg-10 -->
+                <!-- /.row -->
+
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <div class="row">
+                                    <div class="col-xs-3">
+                                        <i class="fa fa-comments fa-3x"></i>
+                                    </div>
+                                    <div class="col-xs-9 text-right">
+                                        <div class="huge">Players</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#">
+                                <div class="panel-footer">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <div class="row">
+                                    <div class="col-xs-3">
+                                        <i class="fa fa-tasks fa-3x"></i>
+                                    </div>
+                                    <div class="col-xs-9 text-right">
+                                        <div class="huge">Heroes</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#">
+                                <div class="panel-footer">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="panel panel-primary">
+                            <div class="panel-heading">
+                                <div class="row">
+                                    <div class="col-xs-3">
+                                        <i class="fa fa-shopping-cart fa-3x"></i>
+                                    </div>
+                                    <div class="col-xs-9 text-right">
+                                        <div class="huge">Items</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <a href="#">
+                                <div class="panel-footer">
+                                    <span class="pull-left">View Details</span>
+                                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.row -->
+
+
+               <!-- Features Section -->
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2 class="page-header">Player Statistics</h2>
+                    </div>
+                    <div class="col-md-1">
+                    </div>
+                    <div class="col-lg-4">
+                        <p>Type in a player's user name to discover their past performance, their favorite items and best heroes</p>
+                    </div>
+                    <div class="col-lg-6">
+                        <p>SEARCH BOX</p>
+                    </div>
+                </div>
+
             </div>
-            <!-- /.row -->
+                    <!-- /.container-fluid -->
         </div>
-        <!-- /.container -->
-    </section>
+                <!-- /#page-wrapper -->
+
     <!-- Footer -->
     <footer>
         <div class="container">
