--- a/machine-learning.html
+++ b/machine-learning.html
@@ -61,10 +61,10 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Hi, I'm Dudon</h1>
+            <h1>Machine Learning</h1>
             <h3></h3>
             <br>
-            <a href="#about" class="btn btn-dark btn-lg">Check Out My Projects</a>
+            <a href="#about" class="btn btn-dark btn-lg">My Course Work at Georgia Tech</a>
         </div>
     </header>
 
@@ -91,76 +91,7 @@
         <!-- /.container -->
     </section>
 
-    <!-- Services -->
-    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
-        <div class="container">
-            <div class="row text-center">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Projects</h2>
-                    <hr class="small">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>GreyADV</strong>
-                                </h4>
-                                <p>A web development agency that turned to education to teach new startups how to MVP.</p>
-                                <a href="http://www.greyadv.com/" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Marketing Firm</strong>
-                                </h4>
-                                <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook</p>
-                                <a href="marketing.html" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Artificial Intelligence</strong>
-                                </h4>
-                                <p>Program or be programmed. My journey at Georgia Tech to become a technical programmer in AI.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                        <div class="col-md-3 col-sm-6">
-                            <div class="service-item">
-                                <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
-                            </span>
-                                <h4>
-                                    <strong>Dota Stats</strong>
-                                </h4>
-                                <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- /.row (nested) -->
-                </div>
-                <!-- /.col-lg-10 -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
+
     <!-- Footer -->
     <footer>
         <div class="container">
