--- a/marketing.html
+++ b/marketing.html
@@ -110,7 +110,7 @@
                                     <strong>GreyADV</strong>
                                 </h4>
                                 <p>A web development agency that turned to education to teach new startups how to MVP.</p>
-                                <a href="http://www.greyadv.com/" class="btn btn-light">Learn More</a>
+                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -123,7 +123,7 @@
                                     <strong>Marketing Firm</strong>
                                 </h4>
                                 <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook</p>
-                                <a href="marketing.html" class="btn btn-light">Learn More</a>
+                                <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
