--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <title>Dudon Wai</title>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -47,13 +50,7 @@
                 <a href="#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Services</a>
-            </li>
-            <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
+                <a href="#projects" onclick=$("#menu-close").click();>Projects</a>
             </li>
         </ul>
     </nav>
@@ -91,9 +88,9 @@
         <!-- /.container -->
     </section>
 
-    <!-- Services -->
+    <!-- Projects -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
-    <section id="services" class="services bg-primary">
+    <section id="projects" class="services bg-primary">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
@@ -110,7 +107,7 @@
                                     <strong>GreyADV</strong>
                                 </h4>
                                 <p>A web development agency that turned to education to teach new startups how to MVP.</p>
-                                <a href="http://www.greyadv.com/" class="btn btn-light">Learn More</a>
+                                <a href="http://www.greyadv.com/" target="_blank" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -123,7 +120,7 @@
                                     <strong>Marketing Firm</strong>
                                 </h4>
                                 <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook</p>
-                                <a href="marketing.html" class="btn btn-light">Learn More</a>
+                                <a href="404.html" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -136,7 +133,7 @@
                                     <strong>Artificial Intelligence</strong>
                                 </h4>
                                 <p>Program or be programmed. My journey at Georgia Tech to become a technical programmer in AI.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="404.html" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -149,7 +146,7 @@
                                     <strong>Dota Stats</strong>
                                 </h4>
                                 <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
-                                <a href="#" class="btn btn-light">Learn More</a>
+                                <a href="404.html" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                     </div>
@@ -168,19 +165,19 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <ul class="list-inline">
                         <li>
-                            <a href="http://facebook.com/dudonwai"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a href="http://facebook.com/dudonwai" target="_blank"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="http://twitter.com/dudonwai"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a href="http://twitter.com/dudonwai" target="_blank"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="http://linkedin.com/in/dudonwai"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
+                            <a href="http://linkedin.com/in/dudonwai" target="_blank"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="http://github.com/in/dudonwai"><i class="fa fa-github fa-fw fa-3x"></i></a>
+                            <a href="http://github.com/in/dudonwai" target="_blank"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="https://medium.com/@dudonwai"><i class="fa fa-medium fa-fw fa-3x"></i></a>
+                            <a href="https://medium.com/@dudonwai" target="_blank"><i class="fa fa-medium fa-fw fa-3x"></i></a>
                         </li>                   
                     </ul>
                     <hr class="small">
