--- a/dota-stats.html
+++ b/dota-stats.html
@@ -6,8 +6,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Dudon Wai is an engineer, programmer and marketer. He co-founded GreyADV and stays busy marketing for SMBs and coding for PetroRecruit - all while studying at Georgia Tech for artificial intelligence.">
+    <meta name="author" content="Dudon Wai">
+    <meta name="keywords" content="Dudon Wai DudonWai Personal Website Calgary Toronto Waterloo Entrepreneur Founder">
+
+    <meta property="og:site_name" content="Dudon Wai">
+    <meta property="og:title" content="Dudon Wai">
+    <meta property="og:description" content="Dudon Wai is an engineer, programmer and marketer. He co-founded GreyADV and stays busy marketing for SMBs and coding for PetroRecruit - all while studying at Georgia Tech for artificial intelligence.">
+    <meta property="og:url" content="http://www.dudonwai.com/">
+    <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
 
     <title>Dudon Wai</title>
 
