--- a/404.html
+++ b/404.html
@@ -91,7 +91,7 @@
                     <p>Oops! The page you're looking for doesn't exist or it's under construction.</p>
                     <p>How about you go back and see my projects?</p>
                     <br>
-                    <a href="#about" class="btn btn-dark btn-lg">Check Out My Projects</a>
+                    <a href="/" class="btn btn-dark btn-lg">Check Out My Projects</a>
                 </div>
             </div>
             <!-- /.row -->
