Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                     <strong>Marketing Firm</strong>
                                 </h4>
                                 <p>Supporting local SMBs with online advertising primarily on Google &amp; Facebook</p>
-                                <a href="404.html" class="btn btn-light">Learn More</a>
+                                <a href="404" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -149,7 +149,7 @@
                                     <strong>Artificial Intelligence</strong>
                                 </h4>
                                 <p>Program or be programmed. My journey at Georgia Tech to become a technical programmer in AI.</p>
-                                <a href="404.html" class="btn btn-light">Learn More</a>
+                                <a href="404" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -162,7 +162,7 @@
                                     <strong>Dota Stats</strong>
                                 </h4>
                                 <p>A little project to leverage gaming statistical data and present insights and rich visuals.</p>
-                                <a href="404.html" class="btn btn-light">Learn More</a>
+                                <a href="404" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
                     </div>
