--- a/google-adwords-exam-help.html
+++ b/google-adwords-exam-help.html
@@ -6,17 +6,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="The Google Adwords certificate demonstrates you know how to advertise on Google. All you need is some practice and to pass the exam. Feel free to study from these sample test questions - with answers.">
+    <meta name="description" content="Dudon Wai is an engineer, programmer and marketer. He co-founded GreyADV and stays busy marketing for SMBs and coding for PetroRecruit - all while studying at Georgia Tech for artificial intelligence.">
     <meta name="author" content="Dudon Wai">
-    <meta name="keywords" content="Dudon Wai DudonWai Google Adwords Exam Question Answer SEO SEM Marketing">
+    <meta name="keywords" content="Dudon Wai DudonWai Personal Website Calgary Toronto Waterloo Entrepreneur Founder">
 
     <meta property="og:site_name" content="Dudon Wai">
-    <meta property="og:title" content="Google AdWords Exam Help">
-    <meta property="og:description" content="The Google Adwords certificate demonstrates you know how to advertise on Google. All you need is some practice and to pass the exam. Feel free to study from these sample test questions - with answers.">
-    <meta property="og:url" content="http://www.dudonwai.com/google-adwords-exam-help">
-    <meta property="og:image" content="http://www.dudonwai.com/img/google-adwords-logo.jpg">
+    <meta property="og:title" content="Dudon Wai">
+    <meta property="og:description" content="Dudon Wai is an engineer, programmer and marketer. He co-founded GreyADV and stays busy marketing for SMBs and coding for PetroRecruit - all while studying at Georgia Tech for artificial intelligence.">
+    <meta property="og:url" content="http://www.dudonwai.com/">
+    <meta property="og:image" content="http://www.dudonwai.com/img/bg.png">
 
-    <title>Google AdWords Exam Help - SEO, SEM, Marketing</title>
+    <title>SEO AdWords Questions</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
@@ -57,16 +57,22 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="/" onclick=$("#menu-close").click();>Dudon Wai</a>
+                <a href="#top" onclick=$("#menu-close").click();>Dudon Wai</a>
             </li>
             <li>
-                <a href="/" onclick=$("#menu-close").click();>Home</a>
+                <a href="#top" onclick=$("#menu-close").click();>Home</a>
             </li>
             <li>
-                <a href="/#about" onclick=$("#menu-close").click();>About</a>
+                <a href="#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="/#projects" onclick=$("#menu-close").click();>Projects</a>
+                <a href="#services" onclick=$("#menu-close").click();>Services</a>
+            </li>
+            <li>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
+            </li>
+            <li>
+                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
             </li>
         </ul>
     </nav>
@@ -77,7 +83,7 @@
             <h1>Google AdWords</h1>
             <h3></h3>
             <br>
-            <a href="#subheading" class="btn btn-dark btn-lg">Exam Practice Questions</a>
+            <a href="#exam" class="btn btn-dark btn-lg">Exam Practice Questions</a>
         </div>
     </header>
 
