--- a/machine-learning.html
+++ b/machine-learning.html
@@ -54,13 +54,7 @@
                 <a href="#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Services</a>
-            </li>
-            <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
-            </li>
-            <li>
-                <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
+                <a href="#projects" onclick=$("#menu-close").click();>Projects</a>
             </li>
         </ul>
     </nav>
