--- a/google-adwords-exam-help.html
+++ b/google-adwords-exam-help.html
@@ -88,7 +88,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>What is Google AdWords?</h2>
                     <span><img 
-                        src="img/google-adwords-logo.jpg"
+                        src="img/google-logo.jpg"
                         height="175" 
                         width="375">
                         </span>
